--- a/dicoding/dasar-pemrograman-web/assets/styles/lat-css.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/lat-css.css
@@ -86,3 +86,124 @@ h2~p {
     color: rgb(4, 176, 238);
 }
 
+/* * child */
+figure>p {
+    background-color: yellow;
+}
+
+/* * descendant */
+/* Rule akan diterapkan pada elemen header yang berada tepat setelah elemen img */
+div h4 {
+    background-color: yellow;
+}
+
+/* * pseudo-class */
+/* rule akan diterapkan pada sebuah tautan yang belum pernah dikunjungi */
+a:link {
+    color: red;
+}
+
+/* rule akan diterapkan pada sebuah tautan yang sudah pernah dikunjungi */
+a:visited {
+    color: green;
+}
+
+/* rule akan diterapkan pada sebuah tautan ketika diarahkan dengan kursor */
+a:hover {
+    color: pink;
+}
+
+/* rule akan diterapkan pada sebuah tautan ketika ditekan */
+a:active {
+    color: orange;
+}
+
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes */
+
+/* * pseudo-element */
+blockquote::before,
+blockquote::after {
+    content: '"';
+    font-size: 24px;
+    font-style: italic;
+    font-weight: bold;
+}
+
+blockquote::first-line {
+    font-size: 32px;
+    font-weight: bold;
+    color: saddlebrown;
+}
+
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements */
+
+/* * font styling */
+.font-styling span {
+    color: black;
+}
+
+.normal {
+    font-weight: normal;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.bolder {
+    font-weight: bolder;
+}
+
+.lighter {
+    font-weight: lighter;
+}
+
+.fw100 {
+    font-weight: 100;
+}
+
+.fw200 {
+    font-weight: 200;
+}
+
+.fw300 {
+    font-weight: 300;
+}
+
+.fw400 {
+    font-weight: 400;
+}
+
+.fw500 {
+    font-weight: 500;
+}
+
+.fw600 {
+    font-weight: 600;
+}
+
+.fw700 {
+    font-weight: 700;
+}
+
+.fw800 {
+    font-weight: 800;
+}
+
+.fw900 {
+    font-weight: 900;
+}
+
+.normal {
+    font-style: normal;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.oblique {
+    font-style: oblique;
+}
+
+/* text styling */
