--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: sans-serif;
+    /* akhir font-family harus generic yang dapat diterima semua browser */
+    font-family : sans-serif, Arial, "Open Sans";
 }
 
 h2, h3 {
