--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -1,9 +1,10 @@
 body {
     /* akhir font-family harus generic yang dapat diterima semua browser */
-    font-family : sans-serif, Arial, "Open Sans";
+    font-family: 'Quicksand', sans-serif;
 }
 
-h2, h3 {
+h2,
+h3 {
     color: #00a2c6;
 }
 
