--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -22,8 +22,19 @@ nav a:hover {
     font-weight: bold;
 }
 
+.featured-image {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
 .profile header {
     text-align: center;
+}
+
+.profile img {
+    width: 200px;
 }
 
 footer {
