latihan positioning: static, relative, & absolute + percobaan nav main

--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -27,8 +27,13 @@ nav a {
     color: white;
 }
 
-nav a:hover {
+a:hover {
     font-weight: bold;
+}
+
+.halaman-main a:hover {
+    color: white;
+    background-color: #00c8eb;
 }
 
 .featured-image {
