--- a/dicoding/dasar-pemrograman-web/assets/styles/lat-css-positioning.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/lat-css-positioning.css
@@ -1,3 +1,12 @@
+* {
+    /* digunakan untuk menghapus seluruh padding dan margin standar yang diberikan browser pada elemen */
+    margin: 0;
+    padding: 0;
+
+    /* Menggunakan border-box dalam perhitungan dimensi box-nya */
+    box-sizing: border-box;
+}
+
 .box {
     width: 200px;
     height: 200px;
@@ -52,7 +61,7 @@ h1 {
 
 .fixed {
     position: fixed;
-    top: 50px;
+    top: 150px;
     left: 0;
 }
 
@@ -61,4 +70,76 @@ h3 {
     background-color: #aaaaaa;
     margin: 0;
     width: 100%;
+}
+
+.container {
+    width: 800px;
+    height: 400px;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+
+.left-content {
+    text-align: center;
+    line-height: 400px;
+    width: 30%;
+    height: 100%;
+    background-color: #00c7ed;
+
+    /* digunakan untuk memindahkan posisi elemen ke sisi kiri container */
+    float: left;
+}
+
+.right-content {
+    text-align: center;
+    line-height: 400px;
+    width: 70%;
+    height: 100%;
+    background-color: #60d0a8;
+
+    /* digunakan untuk memindahkan posisi elemen ke sisi kanan container */
+    float: right;
+}
+
+.coba3-left-content {
+    text-align: center;
+    line-height: 400px;
+    width: 33.3%;
+    height: 100%;
+    background-color: #00c7ed;
+    float: left;
+}
+
+.coba3-center-content {
+    text-align: center;
+    line-height: 400px;
+    width: 33.3%;
+    height: 100%;
+    background-color: #d0b541;
+    float: left;
+}
+
+.coba3-right-content {
+    text-align: center;
+    line-height: 400px;
+    width: 33.3%;
+    height: 100%;
+    background-color: #60d0a8;
+    float: left;
+}
+
+.container-float {
+    width: 800px;
+    padding: 8px;
+    border: 4px solid black;
+    /* ! bisa diatasi dengan */
+    /* overflow: auto; */
+    /* ! atau clear, value sesuai dengan float (left, right, both) */
+    /* * clear harus pada container baru (div baru) yang kosong */
+    /* clear: left */
+}
+
+img {
+    float: left;
+    margin: 10px;
 }
