--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     /* akhir font-family harus generic yang dapat diterima semua browser */
     font-family: 'Quicksand', sans-serif;
@@ -8,6 +12,7 @@ body {
 
 main {
     padding: 20px;
+    overflow: auto;
 }
 
 h2,
@@ -78,6 +83,19 @@ nav li {
 nav {
     background-color: #00a2c6;
     padding: 5px;
+}
+
+#content {
+    width: 75%;
+    float: left;
+}
+
+aside {
+    width: 25%;
+    float: right;
+    padding-left: 20px;
+    /* ! untuk menguji */
+    /* background-color: gainsboro; */
 }
 
 footer {
