--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -105,3 +105,17 @@ footer {
     text-align: center;
     font-weight: bold;
 }
+
+@media screen and (max-width: 1000px) {
+
+    #content,
+    aside {
+        width: 100%;
+        padding: 0;
+    }
+}
+
+/* https://www.dicoding.com/blog/dasar-tampilan-responsif-pada-website/ 
+https://developers.google.com/web/fundamentals/design-and-ux/responsive
+https://developer.mozilla.org/en-US/docs/Web/HTML/Viewport_meta_tag
+https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Media_queries */
