--- a/dicoding/dasar-pemrograman-web/assets/styles/style.css
+++ b/dicoding/dasar-pemrograman-web/assets/styles/style.css
@@ -83,6 +83,14 @@ nav li {
 nav {
     background-color: #00a2c6;
     padding: 5px;
+
+    /* https://developer.mozilla.org/en-US/docs/Web/CSS/position#sticky_positioning */
+    position: sticky;
+    top: 0;
+}
+
+header {
+    display: inline;
 }
 
 #content {
