--- a/dicoding/landing-page-dicoding/assets/css/app.css
+++ b/dicoding/landing-page-dicoding/assets/css/app.css
@@ -78,8 +78,196 @@ header.navbar-container .nav-list li:hover a {
     color: white;
 }
 
-.dummy {
-    height: 0;
+main {
+    flex: 1;
 
-    
+    width: 100%;
+
+    /* ! agar dibatasi dan dapat di tengah */
+    max-width: 1200px;
+
+    /* ! membuat ke tengah */
+    margin-inline: auto;
+
+    /* vertikal, horizontal */
+    padding: 2rem 4rem;
+
+    /* agar content dan aside menjadi flex */
+    display: flex;
+
+    /* agar aside di tengah/sejajar */
+    align-items: center;
 }
+
+div.content {
+    flex: 1;
+
+    display: flex;
+    align-items: center;
+}
+
+main .content .content-description {
+    flex: 1 1;
+}
+
+main .content .content-description .title {
+    /* background-color: bisque; */
+
+    /* memperkecil margin */
+    margin-block: 1rem;
+
+    font-size: 3.5rem;
+
+
+}
+
+main .content .content-description p {
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+}
+
+main .content .content-description button {
+    padding: 0.8rem 2.5rem;
+    border: 3px solid transparent;
+    border-radius: 999px;
+    -webkit-border-radius: 999px;
+    -moz-border-radius: 999px;
+    -ms-border-radius: 999px;
+    -o-border-radius: 999px;
+
+    /* start -> margin di atas */
+    margin-block-start: 1rem;
+    /* margin-top: 1rem; */
+
+    background-color: #2d3e50;
+
+    /* reset ulang font */
+    font-family: 'Quicksand', sans-serif;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 700;
+    color: white;
+
+    cursor: pointer;
+    transition: all 0.15s ease-in;
+}
+
+main .content .content-description button:hover {
+    border: 3px solid #2d3e50;
+    background-color: transparent;
+    color: #2d3e50;
+}
+
+main .content .content-image {
+    flex: 1;
+    display: flex;
+
+    /* kenapa tanpa konten lain tetap di tengah otomatis?
+    karena margin: auto pada img */
+
+    /* https://codesandbox.io/p/sandbox/contoh-margin-auto-dalam-flexbox-kd4elo?file=%2Findex.html */
+}
+
+main .content .content-image img {
+    width: 300px;
+    min-width: 250px;
+
+    /* ! membuat img di tengah */
+    margin: auto;
+}
+
+main aside {
+    /* background-color: bisque; */
+    position: fixed;
+    /* agar seluruh kena, 
+    inset adalah shorthand top right bottom left */
+    /* ! vertikal */
+    inset-block: 0;
+    /* berada di ujung kiri */
+    /* ! horizontal */
+    inset-inline-end: 0;
+}
+
+main aside .social-media {
+    height: 100%;
+    display: flex;
+}
+
+main aside .social-media ul {
+    margin: auto;
+    /* background-color: bisque; */
+    padding: 1.5rem 1rem;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    background-color: #2d3e50;
+
+    display: flex;
+    /* flex-direction: column;
+    flex-wrap: nowrap; */
+    flex-flow: column nowrap;
+
+    justify-content: center;
+
+    /* agar logo rapi tengah */
+    align-items: center;
+    gap: 1.5rem;
+}
+
+main aside .social-media li {
+    list-style-type: none;
+}
+
+main aside .social-media li a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    /* merubah warna icon */
+    color: white;
+
+    transition: all 0.1s ease-in-out;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -ms-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+}
+
+main aside .social-media li a:hover {
+    color: #89b0d9;
+}
+
+
+@media screen and (max-width: 768px) {
+    header.navbar-container {
+        flex-direction: column;
+    }
+    
+    header.navbar-container .nav-list ul {
+        flex-wrap: wrap;
+    }
+    
+    main {
+        padding: 1rem 3rem;
+    }
+    
+    main .content {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    main .content .content-description .title {
+        font-size: 3rem;
+    }
+    
+    main .content .content-description p {
+        font-size: 1rem;
+    }
+    
+    main .content .content-image {
+        order: -1;
+    }
+}
+
+/* @media screen and (max-width: 462px) {
+    header.navbar-container .nav-list ul {
+        flex-wrap: wrap;
+    }
+} */
