--- a/dicoding/tugas-akhir-membuat-website/assets/css/app.css
+++ b/dicoding/tugas-akhir-membuat-website/assets/css/app.css
@@ -88,3 +88,56 @@ header.navbar-container .nav-list li:hover a {
     background-color: black;
     color: var(--bg-color);
 }
+
+/* ! main element */
+main {
+    flex: 1;
+    width: 100%;
+    max-width: 1200px;
+
+    /* agar berada di tengah */
+    margin-inline: auto;
+
+    /* padding: 2rem 4rem; */
+    display: flex;
+    align-items: flex-start;
+}
+
+/* ! child main */
+div.content {
+    flex: 1;
+    display: flex;
+    /* align-items: center; */
+    flex-flow: column nowrap;
+}
+
+div.content .hero {
+    display: flex;
+    align-items: center;
+}
+
+div.content .hero .hero-description {
+    background-color: var(--debug-color1);
+    flex: 3;
+}
+
+div.content .hero .hero-description .title {
+    margin-block: 1rem;
+    font-size: 2rem;
+}
+
+div.content .hero .hero-image {
+    background-color: var(--debug-color2);
+    flex: 2;
+
+    /* menjadi parent agar img dapat di tengah */
+    display: flex;
+}
+
+div.content .hero .hero-image img {
+    width: 300px;
+    min-width: 250px;
+
+    margin: auto;
+}
+
