--- a/dicoding/tugas-akhir-membuat-website/assets/css/app.css
+++ b/dicoding/tugas-akhir-membuat-website/assets/css/app.css
@@ -123,7 +123,12 @@ div.content .hero .hero-description {
 
 div.content .hero .hero-description .title {
     margin-block: 1rem;
-    font-size: 2rem;
+    font-size: 1.9rem;
+}
+
+div.content .hero .hero-description p {
+    font-size: 1.1rem;
+    line-height: 1.7rem;
 }
 
 div.content .hero .hero-image {
