--- a/dicoding/tugas-akhir-membuat-website/assets/css/app.css
+++ b/dicoding/tugas-akhir-membuat-website/assets/css/app.css
@@ -17,6 +17,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--bg-color);
 
+    /* * jika digunakan maka navbar akan stop */
     /* height: 100vh; */
     margin: 0;
 
@@ -53,7 +54,7 @@ header.navbar-container {
     /* max-width: 1200px; */
 
     /* vertikal horizontal */
-    padding-block: 1.5rem 1rem;
+    padding-block: 1.2rem 1.3rem;
     padding-inline: 1.3rem;
 
     display: flex;
@@ -330,9 +331,8 @@ div.content .portofolio .porto-list .project img:hover {
 /* * About */
 div.content .about {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: column;
     gap: 1rem;
-    margin-inline: auto;
 }
 
 div.content .about>h2,
@@ -457,6 +457,8 @@ aside .profile .profile-description {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     gap: 0.5rem;
 }
 
@@ -464,7 +466,8 @@ aside .profile .profile-description .profile-email {
     color: var(--bg-color);
     padding: 0.5em;
     width: 80%;
-    /* margin-bottom: 20px; */
+    display: inline-block;
+    text-align: center;
     background-color: var(--text-color);
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -524,6 +527,11 @@ footer {
     }
 }
 
+@media screen and (max-width: 510px) {
+    aside .profile .profile-description .profile-email {
+        width: 14em;
+    }
+}
 /* * Mobile Phone */
 @media screen and (max-width: 768px) {
     header.navbar-container {
@@ -565,10 +573,10 @@ footer {
 }
 
 /* * Desktop */
-
 @media screen and (max-width: 1200px) {
     main .container {
         flex-direction: column;
+        gap: 0;
     }
 
     div.content {
